# shellbin

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  release.yml
src/: cli.rs  encode.rs  main.rs  result.rs
src/assembler/: linux.rs  linux_amd64.rs  linux_x86.rs  mod.rs  windows.rs
src/assembler/linux/: amd64.rs  i386.rs  mod.rs
src/assembler/windows/: mod.rs
template/: bytes.toml
template/src/: linux-amd64.s  linux-i386.s  windows.s
