[package]
name = "shellbin"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Ship your shell script as executable binary"
repository = "https://github.com/bunopnu/shellbin"
authors = ["bunopnu <lib@bun.rip>"]

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0.58"
