[package]
name = "shellbin"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Ship your shell script as executable binary"
repository = "https://github.com/bunopnu/shellbin"
authors = ["bunopnu <lib@bun.rip>"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"

[build-dependencies]
toml = "0.8"
